--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,29 @@
   </head>
 
   <body>
+    <header>
+      <ul>
+      <li><a href="/">bookers</a></li>
+      <% if user_signed_in? %>
+        <li><%= link_to "logout",destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to "Books",books_path %></li>
+        <li><%= link_to "Users",users_path %></li>
+        <!--user_controllerにてshowaction定義後、path修正-->
+        <li><%= link_to "Home",root_path %></li>
+      <% else %>
+        <li> <%= link_to "Sign_in",new_user_session_path %></li>
+        <li><%= link_to "Sign_up",new_user_registration_path %></li>
+        <li><%= link_to "About",about_path %></li>
+        <li><%= link_to "Home",root_path %></li>
+      <% end %>
+      </ul>
+    </header>
+
     <%= yield %>
+    <footer>
+      <div>
+        <p>CopyRight Infratop.inc</p>
+      </div>
+    </footer>
   </body>
 </html>
