--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,18 @@
 <h1>Books#index</h1>
 <p>Find me in app/views/books/index.html.erb</p>
+
+<div>
+  <h3>User info</h3>
+</div>
+
+
+<div>
+  <h3>NewBook</h3>
+  <%= form_with model: @book,method: :post do |f| %>
+  <p>title</p>
+  <%= f.text_field :title %>
+  <p>introduction</p>
+  <%= f.text_field :opinion %>
+  <%= f.submit "submit" %>
+  <% end %>
+</div>
