[Update]books_indexページの修正

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,6 +3,9 @@
 
 <div>
   <h3>User info</h3>
+  <div><%= image_tag @user.get_image %></div>
+  <p><%= @user.name %></p>
+  <p><%= @user.introduction %></p>
 </div>
 
 
