[Add]bookモデルのshowページを作成

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,6 +6,7 @@
   <div><%= image_tag @user.get_image %></div>
   <p><%= @user.name %></p>
   <p><%= @user.introduction %></p>
+  <p><%= link_to "edit",edit_user_path(current_user) %></p>
 </div>
 
 
@@ -17,5 +18,17 @@
   <p>introduction</p>
   <%= f.text_field :opinion %>
   <%= f.submit "submit" %>
+  <% end %>
+</div>
+
+<div>
+  <h3>Books</h3>
+  <p>title</p>
+  <% @books.each do |book| %>
+    <%= image_tag book.user.get_image %>
+    <p><%= book.title %></p>
+    <p><%= book.opinion %></p>
+    <p><%= link_to "show",book_path(book.id) %></p>
+    <p><%= link_to "edit",edit_book_path(book.id) %></p>
   <% end %>
 </div>
