--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,20 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
+<div>
+  <h3>User info</h3>
+  <div><%= image_tag @user.get_image %></div>
+  <p><%= @user.name %></p>
+  <p><%= @user.introduction %></p>
+  <p><%= link_to "edit",edit_user_path(current_user) %></p>
+</div>
+
+
+<div>
+  <h3>Books</h3>
+  <p>title</p>
+  <% @books.each do |book| %>
+    <%= image_tag book.user.get_image %>
+    <p><%= link_to book.title,book_path(book.id) %></p>
+    <p><%= book.opinion %></p>
+  <% end %>
+</div>
