--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,21 @@
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
 <div>
   <h3>User info</h3>
   <div><%= image_tag @user.get_image %></div>
   <p><%= @user.name %></p>
   <p><%= @user.introduction %></p>
   <p><%= link_to "edit",edit_user_path(current_user) %></p>
+</div>
+
+<div>
+  <h3>NewBook</h3>
+  <%= form_with model: @book,method: :post do |f| %>
+  <p>title</p>
+  <%= f.text_field :title %>
+  <p>introduction</p>
+  <%= f.text_field :opinion %>
+  <%= f.submit "submit" %>
+  <% end %>
 </div>
 
 
