--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
       <% end %>
       </ul>
     </header>
+    <% flash.each do |key,value| %>
+      <%= content_tag(:div,value,class: "#{key}") %>
+    <% end %>
 
     <%= yield %>
     <footer>
