--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
 <h1>Users#show</h1>
+<% if flash[:notice] %>
+    <%= flash[:notice] %>
+<% end %>
+
 <div>
   <h3>User info</h3>
   <div><%= image_tag @user.get_image %></div>
