[Add]モデルへのバリデーションチェックの実装

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,13 @@
 <h3>Editing Book</h3>
-<% if flash[:alert] %>
-    <%= flash[:alert] 
-<% end %>
+    <% if @book.errors.any? %>
+      <p><%= @book.errors.count %>件のエラーが発生しました</p>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    <% end %>
+<p>Find me in a
 <%= form_with model: @book do |f| %>
 <p>title</p>
 <%= f.text_field :title %>
