--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,12 @@
 <h1>Books#index</h1>
+    <% if @book.errors.any? %>
+      <p><%= @book.errors.count %>件のエラーが発生しました</p>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    <% end %>
 <p>Find me in app/views/books/index.html.erb</p>
 
 <div>
