--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,16 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
+      <p>in <i class="fa-solid fa-book"></i> <strong>Bookers</strong>,</p>
+      <p>you can share and exchange your opinions , inpressions , and emotions
+        about various books!</p>
+      <div class="row">
+        <%= link_to 'Log in', new_user_session_path, class: "col-10 btn btn-info btn-block mb-3 mx-auto" %>
+      </div>
+      <div class="row">
+        <%= link_to 'Sign up',new_user_registration_path, class: "col-10 btn btn-success btn-block mx-auto" %>
+      </div>
+    </div>
+  </div>
+</div>
