--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,9 @@
-<h1>Welcome to <strong>Bookers</strong></h1>
+<div class="container">
+  <div class="row">
+    <div class="col-6 mx-auto">
+      <h1 class="mt-3 text-center">
+        welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong>
+      </h1>
+    </div>
+  </div>
+</div>
