--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-10 mx-auto">
-      <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
+    <div class="col-6 mx-auto">
+      <h1 class="mt-3">welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
       <p>in <i class="fa-solid fa-book"></i> <strong>Bookers</strong>,</p>
       <p>you can share and exchange your opinions , inpressions , and emotions
         about various books!</p>
