--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,21 +14,55 @@
 
   <body>
     <header>
-      <ul>
-      <li><a href="/">bookers</a></li>
-      <% if user_signed_in? %>
-        <li><%= link_to "logout",destroy_user_session_path, method: :delete %></li>
-        <li><%= link_to "Books",books_path %></li>
-        <li><%= link_to "Users",users_path %></li>
-        <!--user_controllerにてshowaction定義後、path修正-->
-        <li><%= link_to "Home",user_path(current_user.id) %></li>
-      <% else %>
-        <li> <%= link_to "Log in",new_user_session_path %></li>
-        <li><%= link_to "Sign_up",new_user_registration_path %></li>
-        <li><%= link_to "About",about_path %></li>
-        <li><%= link_to "Home",root_path %></li>
-      <% end %>
-      </ul>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand ms-5" href="/">bookers</a>
+        <button class="navbar-toggler" type="button" data-toggle="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expand="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item"><%= link_to "logout",destroy_user_session_path, method: :delete, class: 'nav-link text-light' %></li>
+          <li class="nav-item"><%= link_to "Books",books_path, class: 'nav-link text-light' %></li>
+          <li class="nav-item"><%= link_to "Users",users_path, class: 'nav-link text-light' %></li>
+          <!--user_controllerにてshowアクション定義後、path修正-->
+          <li class="nav-item"><%= link_to "Home",user_path(current_user.id), class: 'nav-link text-light' %></li>
+        <% else %>
+          <li class="nav-item">
+            <%=link_to root_path do %>
+            <span class='nav-link text-light'>
+              <i class="fa-solid fa-house-user"></i> Home
+            </span>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to about_path do %>
+            <span  class= 'nav-link text-light'>
+              <i class="fa-solid fa-link"></i> About
+            </span>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_user_registration_path do %>
+            <span class='nav-link text-light'>
+              <i class="fa-solid fa-user-plus"></i> Sign_up
+            </span>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_user_session_path do %>
+            <span class='nav-link text-light'>
+              <i class="fa-solid fa-right-to-bracket"></i> Log in
+            </span>
+            <% end %>
+          </li>
+        <% end %>
+        </ul>
+        </div>
+      </div>
+      </nav>
     </header>
     <% flash.each do |key,value| %>
       <%= content_tag(:div,value,class: "#{key}") %>
@@ -37,7 +71,7 @@
     <footer>
       <div class="container mt-5">
         <div class="row">
-          <p class="mx-auto">CopyRight Infratop.inc</p>
+          <p class="mx-auto">CopyRight furuta shinya</p>
         </div>
       </div>
     </footer>
