--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand ms-5" href="/">bookers</a>
+        <a class="navbar-brand ms-5" href="/">Bookers</a>
         <button class="navbar-toggler" type="button" data-toggle="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expand="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -24,11 +24,35 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
-          <li class="nav-item"><%= link_to "logout",destroy_user_session_path, method: :delete, class: 'nav-link text-light' %></li>
-          <li class="nav-item"><%= link_to "Books",books_path, class: 'nav-link text-light' %></li>
-          <li class="nav-item"><%= link_to "Users",users_path, class: 'nav-link text-light' %></li>
           <!--user_controllerにてshowアクション定義後、path修正-->
-          <li class="nav-item"><%= link_to "Home",user_path(current_user.id), class: 'nav-link text-light' %></li>
+          <li class="nav-item">
+            <%= link_to user_path(current_user.id) do %>
+            <span class='nav-link text-light'>
+              <i class="fa-solid fa-house-user"></i> Home
+            </span>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to users_path do %>
+            <span class='nav-link text-light'>
+              <i class="fa-solid fa-users"></i> Users
+            </span>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to books_path do %>
+            <span class='nav-link text-light'>
+              <i class="fa-solid fa-book-arrow-right"></i> Books
+            </span>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to destroy_user_session_path, method: :delete do %>
+            <span class='nav-link text-light'>
+              <i class="fa-solid fa-right-from-bracket"></i> Log out
+            </span>
+            <% end %>
+          </li>
         <% else %>
           <li class="nav-item">
             <%=link_to root_path do %>
@@ -47,7 +71,7 @@
           <li class="nav-item">
             <%= link_to new_user_registration_path do %>
             <span class='nav-link text-light'>
-              <i class="fa-solid fa-user-plus"></i> Sign_up
+              <i class="fa-solid fa-user-plus"></i> Sign up
             </span>
             <% end %>
           </li>
