[Fix]ActiveStorageでuserモデルに設定したカラム名を変更

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,7 +11,7 @@
 
 <div>
   <h3>User info</h3>
-  <div><%= image_tag @user.get_image %></div>
+  <div><%= image_tag @user.get_profile_image %></div>
   <p><%= @user.name %></p>
   <p><%= @user.introduction %></p>
   <p><%= link_to "edit",edit_user_path(@user.id) %></p>
@@ -33,7 +33,7 @@
   <h3>Books</h3>
   <p>title</p>
   <% @books.each do |book| %>
-    <%= image_tag book.user.get_image %>
+    <%= image_tag book.user.get_profile_image %>
     <p><%= book.title %></p>
     <p><%= book.opinion %></p>
     <p><%= link_to "show",book_path(book.id) %></p>
