--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,10 @@
           <li class="nav-item">
             <%= link_to books_path do %>
             <span class='nav-link text-light'>
-              <i class="fa-solid fa-book-arrow-right"></i> Books
+              <!--なぜか本のアイコンを読み込まない-->
+              <!--<i class="fa-solid fa-book-arrow-right"></i>-->
+              <i class="fa-solid fa-users"></i> Books
+              <!--<i class="fa-solid fa-book-blank"></i> Books-->
             </span>
             <% end %>
           </li>
