--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
 <div>
   <h3>User info</h3>
-  <div><%= image_tag @user.get_image %></div>
+  <div><%= image_tag @user.get_profile_image %></div>
   <p><%= @user.name %></p>
   <p><%= @user.introduction %></p>
   <p><%= link_to "edit",edit_user_path(@user.id) %></p>
@@ -27,7 +27,7 @@
   <h3>Books</h3>
   <p>title</p>
   <% @books.each do |book| %>
-    <%= image_tag book.user.get_image %>
+    <%= image_tag book.user.get_profile_image %>
     <p><%= link_to book.title,book_path(book.id) %></p>
     <p><%= book.opinion %></p>
   <% end %>
