[Fix]bookテーブルのカラム名変更

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -11,7 +11,7 @@
 <p>title</p>
 <%= f.text_field :title %>
 <p>opinion</p>
-<%= f.text_field :opinion %>
+<%= f.text_field :body %>
 <%= f.submit "Update book" %>
 <% end %>
 
