--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
   <p>title</p>
   <%= f.text_field :title %>
   <p>introduction</p>
-  <%= f.text_field :opinion %>
+  <%= f.text_field :body %>
   <%= f.submit "submit" %>
   <% end %>
 </div>
