--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
   <p>title</p>
   <%= f.text_field :title %>
   <p>introduction</p>
-  <%= f.text_field :opinion %>
+  <%= f.text_field :body %>
   <%= f.submit "submit" %>
   <% end %>
 </div>
@@ -29,6 +29,6 @@
   <% @books.each do |book| %>
     <%= image_tag book.user.get_profile_image %>
     <p><%= link_to book.title,book_path(book.id) %></p>
-    <p><%= book.opinion %></p>
+    <p><%= book.body %></p>
   <% end %>
 </div>
