[Update]application.html.erbのファイルを修正

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,42 +1,38 @@
-<h1>Books#index</h1>
-    <% if @book.errors.any? %>
-      <p><%= @book.errors.count %>件のエラーが発生しました</p>
-      <ul>
-        <% @book.errors.full_messages.each do |message| %>
+<!--<h1>Books#index</h1>-->
+ <div>
+   <% if @book.errors.any? %>
+    <p><%= @book.errors.count %>件のエラーが発生しました</p>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
-        <% end %>
-      </ul>
+      <% end %>
+    </ul>
     <% end %>
-<p>Find me in app/views/books/index.html.erb</p>
+ </div>
 
-<div>
-  <h3>User info</h3>
-  <div><%= image_tag @user.get_profile_image %></div>
-  <p><%= @user.name %></p>
-  <p><%= @user.introduction %></p>
-  <p><%= link_to "edit",edit_user_path(@user.id) %></p>
-</div>
-
-
-<div>
-  <h3>NewBook</h3>
-  <%= form_with model: @book,method: :post do |f| %>
-  <p>title</p>
-  <%= f.text_field :title %>
-  <p>introduction</p>
-  <%= f.text_field :body %>
-  <%= f.submit "submit" %>
-  <% end %>
-</div>
-
-<div>
-  <h3>Books</h3>
-  <p>title</p>
-  <% @books.each do |book| %>
-    <%= image_tag book.user.get_profile_image %>
-    <p><%= book.title %></p>
-    <p><%= book.body %></p>
-    <p><%= link_to "show",book_path(book.id) %></p>
-    <p><%= link_to "edit",edit_book_path(book.id) %></p>
-  <% end %>
+<div class="col-8">
+  <h2>Books</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+      <% @books.each do |book| %>
+      <tr>
+        <th><%= image_tag book.user.get_profile_image %></th>
+        <th class="align-middle">
+          <%= link_to book_path(book.id) do %>
+          <%= book.title %>
+          <% end %>
+          </th>
+        <th class="align-middle"><%= book.body %></th>
+      </tr>
+        <% if false %>
+          <p><%= link_to "edit",edit_book_path(book.id) %></p>
+        <% end %>
+      <% end %>
+    </thead>
+  </table>
 </div>
