--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,18 @@
 <h1>Users#index</h1>
 <div>
-  <h3>User info</h3>
-  <div><%= image_tag @user.get_image %></div>
-  <p><%= @user.name %></p>
-  <p><%= @user.introduction %></p>
-  <p><%= link_to "edit",edit_user_path(@user.id) %></p>
+  <%= render 'user', user: @user %>
 </div>
 
 
 <div>
-  <h3>NewBook</h3>
-  <%= form_with model: @book,method: :post do |f| %>
-  <p>title</p>
-  <%= f.text_field :title %>
-  <p>introduction</p>
-  <%= f.text_field :body %>
-  <%= f.submit "submit" %>
-  <% end %>
+
 </div>
 
 <div>
   <h3>Users</h3>
   <p>title</p>
     <% @users.each do |user| %>
-      <%= image_tag user.get_image %>
+      <%= image_tag user.get_profile_image %>
       <p><%= link_to user.name,user_path(user.id) %></p>
       <p><%= user.introduction %></p>
     <% end %>
