--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,25 @@
-<h1>Users#show</h1>
-<% if false %>
-  <% if flash[:notice] %>
-    <%= flash[:notice] %>
-  <% end %>
 
-<div class="row">
-  <div class="col-4">
-    <%= render 'users/user', user: @user %>
-    <%= render 'books/book', book: @book %>
-  </div>
-  <div class="col-8">
-<% end %>
+<div class="col-md-8">
+  <h2 class="m-3">Books</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+      <% @books.each do |book| %>
+      <tr>
+        <th><%= image_tag book.user.get_profile_image %></th>
+        <th class="align-middle">
+          <%= link_to book_path(book.id) do %>
+          <%= book.title %>
+          <% end %>
+          </th>
+        <th class="align-middle"><%= book.body %></th>
+      </tr>
+      <% end %>
+    </thead>
+  </table>
+</div>
 
-
-<h2>Books</h2>
-  <p>title</p>
-  <% @books.each do |book| %>
-    <%= image_tag book.user.get_profile_image %>
-    <p><%= link_to book.title,book_path(book.id) %></p>
-    <p><%= book.body %></p>
-  <% end %>
-<!--  </div>-->
-<!--</div>-->
