--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,4 +1,4 @@
-    <h3>New Book</h3>
+    <h3>New book</h3>
     <%= form_with model: Book.new ,method: :post do |f| %>
       <div>
         <label class="form-label" for="book_title">Title</label>
