--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,22 +1,33 @@
-<h3>Editing Book</h3>
-<% if @book.errors.any? %>
-      <p><%= @book.errors.count %>件のエラーが発生しました</p>
-      <ul>
+<div class="container">
+  <div class="row">
+    <div class="col-md6 mx-auto mb-3">
+    <h2 class="mt-3">Editing Book</h2>
+      <% if @book.errors.any? %>
+        <p><%= @book.errors.count %>件のエラーが発生しました</p>
+        <ul>
         <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <li><%= message %></li>
         <% end %>
-      </ul>
-<% end %>
-<%= form_with model: @book do |f| %>
-<p>title</p>
-<%= f.text_field :title %>
-<p>opinion</p>
-<%= f.text_field :body %>
-<%= f.submit "Update book" %>
-<% end %>
-
-<div>
-  <%= link_to "back",book_path(@book.id) %>
+        </ul>
+      <% end %>
+      <%= form_with model: @book do |f| %>
+        <div>
+          <label class="form-label" for="book_title">Title</label>
+          <%= f.text_field :title,id: "book_title",class: "form-control" %>
+        </div>
+        <div>
+          <label class="form-label"for="book_body">Opinion</label>
+          <%= f.text_field :body ,id: "book_body",class: "form-control mb-3" %>
+        </div>
+        <div>
+          <%= f.submit "Update Book",class: "btn btn-success" %>
+        </div>
+      <% end %>
+      <div>
+        <%= link_to "Back",books_path %> | <%= link_to "Show",book_path(@book.id) %>
+      </div>
+    </div>
+  </div>
 </div>
 
 
