--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,8 +10,8 @@
     <% end %>
  </div>
 
-<div class="col-8">
-  <h2>Books</h2>
+<div class="col-md-8">
+  <h2 class="m-3">Books</h2>
   <table class="table">
     <thead>
       <tr>
@@ -21,7 +21,11 @@
       </tr>
       <% @books.each do |book| %>
       <tr>
-        <th><%= image_tag book.user.get_profile_image %></th>
+        <th>
+          <%= link_to user_path(book.user.id) do %>
+            <%= image_tag book.user.get_profile_image %>
+          <% end %>
+        </th>
         <th class="align-middle">
           <%= link_to book_path(book.id) do %>
           <%= book.title %>
