--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
-<div class="col-8">
-  <h2>Books</h2>
+<div class="col-md-8">
+  <h2 class="m-3">Book detail</h2>
   <table class="table">
     <thead>
       <tr>
@@ -10,7 +10,10 @@
         <th></th>
       </tr>
       <tr>
-        <th><%= image_tag @book.user.get_profile_image %></th>
+        <th>
+          <p><%= image_tag @book.user.get_profile_image %></p>
+          <p><%= link_to @book.user.name, user_path(@book.user) %></p>
+        </th>
         <th class="align-middle">
           <%= link_to book_path(@book.id) do %>
           <%= @book.title %>
@@ -18,8 +21,16 @@
         </th>
         <th class="align-middle"><%= @book.body %></th>
         <% if @book.user.id==current_user.id %>
-          <th class="align-middle"><%= link_to "destroy",method: :destroy %></th>
-          <th class="align-middle"><%= link_to "edit",edit_book_path(@book) %></th>
+          <th class="align-middle">
+            <%= link_to edit_book_path(@book) do %>
+              <span class="btn btn-success">Edit</span>
+            <% end %>
+          </th>
+          <th class="align-middle">
+            <%= link_to book_path(@book.id), method: :delete , "data-confirm" => "本当に削除しますか？"  do %>
+              <span class="btn btn-danger">Destroy</span>
+            <% end %>
+          </th>
         <% else %>
           <th></th>
           <th></th>
@@ -29,16 +40,3 @@
   </table>
 </div>
 
-
-<% if false %>
-  <h3>Books</h3>
-  <p>title</p>
-    <%= image_tag @book.user.get_profile_image %>
-    <p><%= @book.title %></p>
-    <p><%= @book.body %></p>
-    <% if @book.user.id==current_user.id %>
-      <p><%= link_to "destroy",method: :destroy %></p>
-      <p><%= link_to "edit",edit_book_path(@book) %></p>
-    <% end %>
-</div>
-<% end %>
