--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,35 @@
-<h1>Users#index</h1>
-<div>
-  <%= render 'user', user: @user %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="m-4">
+        <%= render 'users/user', user: @user %>
+      </div>
+      <div class="m-4">
+        <%= render 'books/book', book: @book %>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <h2 class="m-3">Users</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th></th>
+          </tr>
+          <% @users.each do |user| %>
+          <tr>
+            <th><%= image_tag user.get_profile_image %></th>
+            <th class="align-middle"><%= user.name %></th>
+            <th class="align-middle">
+              <%= link_to "Show",user_path(user.id) %>
+            </th>
+          </tr>
+          <% end %>
+        </thead>
+      </table>
+    </div>        
+  </div>
 </div>
 
 
-<div>
-
-</div>
-
-<div>
-  <h3>Users</h3>
-  <p>title</p>
-    <% @users.each do |user| %>
-      <%= image_tag user.get_profile_image %>
-      <p><%= link_to user.name,user_path(user.id) %></p>
-      <p><%= user.introduction %></p>
-    <% end %>
-</div>
