--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -14,7 +14,7 @@
   </table>
   <div class="btn btn-outline-secondary btn-block">
     <%= link_to edit_user_path(user.id) do %>
-      <span><i class="fa-solid fa-user-gear" style="color: #b3b3b3;"></i></span>
+      <span><i class="fas fa-user-cog" style="color: #b3b3b3;"></i></span>
     <% end %>
   </div>
 
