--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="m-4">
         <%= render 'users/user', user: @user %>
       </div>
@@ -8,7 +8,7 @@
         <%= render 'books/book', book: @book %>
       </div>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8 offset-md-1">
       <h2 class="m-3">Users</h2>
       <table class="table">
         <thead>
