--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-md6 mx-auto mb-3">
+    <div class="col-md-6 mx-auto mb-3">
     <h2 class="mt-3">Editing Book</h2>
       <% if @book.errors.any? %>
-        <p><%= @book.errors.count %>件のエラーが発生しました</p>
+        <p><%= @book.errors.count %>件のerrorが発生しました</p>
         <ul>
         <% @book.errors.full_messages.each do |message| %>
           <li><%= message %></li>
