--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,33 +10,42 @@
     <% end %>
  </div>
 
-<div class="col-md-8">
-  <h2 class="m-3">Books</h2>
-  <table class="table">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Title</th>
-        <th>Opinion</th>
-      </tr>
-      <% @books.each do |book| %>
-      <tr>
-        <th>
-          <%= link_to user_path(book.user.id) do %>
-            <%= image_tag book.user.get_profile_image %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="m-4">
+        <%= render 'users/user', user: @user %>
+      </div>
+      <div class="m-4">
+        <%= render 'books/book', book: @book %>
+      </div>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2 class="m-3">Books</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+          </tr>
+          <% @books.each do |book| %>
+          <tr>
+            <th>
+              <%= link_to user_path(book.user.id) do %>
+                <%= image_tag book.user.get_profile_image %>
+              <% end %>
+            </th>
+            <th class="align-middle">
+              <%= link_to book_path(book.id) do %>
+                <%= book.title %>
+              <% end %>
+            </th>
+            <th class="align-middle"><%= book.body %></th>
+          </tr>
           <% end %>
-        </th>
-        <th class="align-middle">
-          <%= link_to book_path(book.id) do %>
-          <%= book.title %>
-          <% end %>
-          </th>
-        <th class="align-middle"><%= book.body %></th>
-      </tr>
-        <% if false %>
-          <p><%= link_to "edit",edit_book_path(book.id) %></p>
-        <% end %>
-      <% end %>
-    </thead>
-  </table>
+        </thead>
+      </table>
+    </div>
+  </div>
 </div>
