--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-6 mx-auto">
       <h1 class="mt-3 text-center">
-        welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong>
+        welcome to <i class="fas fa-book"></i><strong>Bookers!!</strong>
       </h1>
     </div>
   </div>
-</div>
+</div>cd
