--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 mx-auto">
-      <h1 class="mt-3">welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
-      <p>in <i class="fa-solid fa-book"></i> <strong>Bookers</strong>,</p>
+      <h1 class="mt-3">welcome to <i class="fas fa-book"></i><strong>Bookers!!</strong></h1>
+      <p>
+         in <i class="fas fa-book"></i> <strong>Bookers</strong>,
+      </p>
       <p>you can share and exchange your opinions , inpressions , and emotions
         about various books!</p>
       <div class="row">
