--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-6 mx-auto mb-3">
     <h2 class="mt-3">User info</h2>
       <% if @user.errors.any? %>
-        <p><%= @user.errors.count %>件のエラーが発生しました</p>
+        <p><%= @user.errors.count %>件のerrorが発生しました</p>
         <ul>
         <% @user.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -31,5 +31,6 @@
     </div>
   </div>
 </div>
+
 
 
