--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <div class="m-4">
+      <div class="mt-3">
         <%= render 'users/user', user: @user %>
       </div>
-      <div class="m-4">
+      <div class="mt-3">
         <%= render 'books/book', book: @book %>
       </div>
     </div>
@@ -17,6 +17,8 @@
             <th>name</th>
             <th></th>
           </tr>
+        </thead>
+        <tbody>
           <% @users.each do |user| %>
           <tr>
             <th><%= image_tag user.get_profile_image %></th>
@@ -26,9 +28,9 @@
             </th>
           </tr>
           <% end %>
-        </thead>
+        </tbody>
       </table>
-    </div>        
+    </div>
   </div>
 </div>
 
