--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,39 +1,41 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <div class="m-4">
+      <div class="mt-3">
         <%= render 'users/user', user: @user %>
       </div>
-      <div class="m-4">
+      <div class="mt-3">
         <%= render 'books/book', book: @book %>
       </div>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2 class="m-3">Books</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Title</th>
-              <th>Opinion</th>
-            </tr>
-            <% @books.each do |book| %>
-            <tr>
-              <th>
-                <%= link_to user_path(book.user.id) do %>
-                  <%= image_tag book.user.get_profile_image %>
-                <% end %>
-              </th>
-              <th class="align-middle">
-                <%= link_to book_path(book.id) do %>
-                  <%= book.title %>
-                <% end %>
-              </th>
-              <th class="align-middle"><%= book.body %></th>
-            </tr>
-            <% end %>
-          </thead>
-        </table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+          <tr>
+            <th>
+              <%= link_to user_path(book.user.id) do %>
+                <%= image_tag book.user.get_profile_image %>
+              <% end %>
+            </th>
+            <th class="align-middle">
+              <%= link_to book_path(book.id) do %>
+                <%= book.title %>
+              <% end %>
+            </th>
+            <th class="align-middle"><%= book.body %></th>
+          </tr>
+          <% end %>
+        </tbody>  
+      </table>
     </div>
   </div>
 </div>
