--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,10 +13,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <div class="m-4">
+      <div class="mt-3">
         <%= render 'users/user', user: @user %>
       </div>
-      <div class="m-4">
+      <div class="mt-3">
         <%= render 'books/book', book: @book %>
       </div>
     </div>
@@ -29,6 +29,8 @@
             <th>Title</th>
             <th>Opinion</th>
           </tr>
+        </thead>
+        <tbody>
           <% @books.each do |book| %>
           <tr>
             <th>
@@ -44,7 +46,7 @@
             <th class="align-middle"><%= book.body %></th>
           </tr>
           <% end %>
-        </thead>
+        </tbody>
       </table>
     </div>
   </div>
