--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <div class="m-4">
+      <div class="mt-3">
         <%= render 'users/user', user: @user %>
       </div>
-      <div class="m-4">
+      <div class="mt-3">
         <%= render 'books/book', book: @book %>
       </div>
     </div>
@@ -19,6 +19,8 @@
               <th></th>
               <th></th>
             </tr>
+          </thead>
+          <tbody>
             <tr>
               <th>
                 <p><%= image_tag @book.user.get_profile_image %></p>
@@ -46,7 +48,7 @@
               <th></th>
               <% end %>
             </tr>
-          </thead>
+          </tbody>
         </table>
     </div>
   </div>
